==> gexueyuan/cct/drivers/zigbee/coordinator/PAL/SAM3/AT91SAM3S4C/Boards/RZ600_231_SAM3SEK/pal_board.c <==
#include <stdbool.h>
#include <stdlib.h>
#include "pal.h"
#include "pal_boardtypes.h"
#include "pal_config.h"
#include "pal_timer.h"
#define SPI_NAME      SPI1
#define SPI_NAME      SPI3
#define SPI_TIMER TIM2
#define SPI_TIMER_PRESCALER 72
#define SPI_TIMER_PRESCALER 48
#define SPI_TIMER_PRESCALER 84 //stm32f401
#define SPI_TIMER_PULSE 0xFFFF
#define SPI_TIMER_IRQ_CHANNEL TIM2_IRQn
#define SPI_TIMER_APB1 RCC_APB1Periph_TIM2
#define SPI_DIRECTION  SPI_Direction_2Lines_FullDuplex
#define SPI_MODE       SPI_Mode_Master
#define SPI_DATASIZE   SPI_DataSize_8b
#define SPI_CPOL_VALUE SPI_CPOL_Low
#define SPI_CPHA_VALUE SPI_CPHA_1Edge
#define SPI_NSS_VALUE  SPI_NSS_Soft
#define SPI_BAUDRATE  SPI_BaudRatePrescaler_16
#define SPI_BAUDRATE  SPI_BaudRatePrescaler_32
#define SPI_FIRSTBIT  SPI_FirstBit_MSB
#define SPI_CRC_N       7
#define CKGR_MUL_SHIFT                     (16)
#define CKGR_PLLCOUNT_SHIFT                (8)
#define CKGR_DIV_SHIFT                     (0)
#define PLLA_MULTIPLIER                    (0xF)
#define PLLA_DIVIDER                       (0x3)
#define PLLA_MULTIPLIER                    (0x7)
#define PLLA_DIVIDER                       (0x1)
#define PLLB_MULTIPLIER                    (0x7)
#define PLLB_DIVIDER                       (0x1)
#define BOARD_OSCOUNT   (CKGR_MOR_MOSCXTST & (0x8 << 8))

void gpio_init(void)
{
    /*
     * The clock to PIO A and PIO B are enabled. This is necessary, as only
     * when the clock is provided the PIO starts functioning.
     */
#if defined   (STM32F051) || defined (STM32F4XX)
   // RCC_APB2PeriphClockCmd(RCC_APB2Periph_SYSCFG,ENABLE);
#else
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO,ENABLE);
#endif    
    
#if defined (STM32F10X_CL)
    PERIPHERAL_CLOCK_ENABLE(ID_PIOD);
#else
    PERIPHERAL_CLOCK_ENABLE(ID_PIOB);
#endif
    PERIPHERAL_CLOCK_ENABLE(ID_PIOA);
#if defined (STM32F401xx) || defined (STM32F405xx)
    PERIPHERAL_CLOCK_ENABLE(ID_PIOC);    
#endif    
    /* The following pins are output pins.  */
#ifndef PA
    PIN_SET_AS_PIO_OUTPUT(RST, PIO_B);
    PIN_SET_AS_PIO_OUTPUT(SLP_TR, PIO_B);
#else
    PIN_SET_AS_PIO_OUTPUT(RST, RST_IO);
    PIN_SET_AS_PIO_OUTPUT(SLP_TR, SLP_TR_IO);
    
#ifndef STM32F10X_CL
#ifndef   STM32F051  
#ifndef   STM32F4XX
    PIN_SET_AS_PIO_OUTPUT(RX_LNA, GPIOA);
#ifndef SYS_OS_RTT		
        PIN_SET_AS_PIO_OUTPUT(DR_485, GPIOB);
		PIN_CLEAR(DR_485, GPIOB);
#endif		
    PAL_RX_LNA_HIGH();
#endif
#endif    
#endif

#endif
}

void timer_init_non_generic(void)
{
#ifdef TIMESTAMP_UPPER_16BIT_SW

    TIM_TimeBaseInitTypeDef  TIM_TimeBaseStructure;
    TIM_OCInitTypeDef  TIM_OCInitStructure;

    RCC_APB1PeriphClockCmd(SPI_TIMER_APB1, ENABLE);

    /* Time base configuration */
    TIM_TimeBaseStructure.TIM_Period = 0xFFFF;
    TIM_TimeBaseStructure.TIM_Prescaler = 0x00;
    TIM_TimeBaseStructure.TIM_ClockDivision = 0x0;
    TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;

    TIM_TimeBaseInit(SPI_TIMER, &TIM_TimeBaseStructure);

    /* Prescaler configuration */
    TIM_PrescalerConfig(SPI_TIMER, SPI_TIMER_PRESCALER, TIM_PSCReloadMode_Immediate);

    /* Output Compare Active Mode configuration: Channel1 */
    TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
    TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;

    TIM_OCInitStructure.TIM_Pulse = SPI_TIMER_PULSE; 
    TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;

    TIM_OC1Init(SPI_TIMER, &TIM_OCInitStructure);
    
    TIM_OC1PreloadConfig(SPI_TIMER, TIM_OCPreload_Disable);

    TIM_UpdateRequestConfig(TIM2,TIM_UpdateSource_Regular);    
    
    TIM_ClearFlag(TIM1, TIM_IT_Update);
    
    TIM_ITConfig(TIM2, TIM_IT_Update, ENABLE);
    
   // initialize_timer_channel(TC_CLKS_MCK32, &PAL_TIMER_CH);

    /* The clock for pal timer is enabled here. */
   // PERIPHERAL_CLOCK_ENABLE(PAL_TIMER_PERIPH_ID);

    /* The clock is enabled at the timer level. */
    TIM2->CR1 |= PAL_TIMER_CCR_EN;

    /* timer overflow interrupts for the pal timer is enabled */
   // PAL_TIMER_IER = PAL_TIMER_SR_OVERFLOW_FLAG;
    NVIC_SetPriority(PAL_TIMER_IRQ_ID, 2);
    /* The pal timer channel interrupt in NVIC is enabled. */
    NVIC_EnableIRQ(PAL_TIMER_IRQ_ID);

    /* pal timer channel is triggered. Reset counter and start clock */
   // PAL_TIMER_CCR = TC_CCR0_SWTRG;
#else
    TIM_TimeBaseInitTypeDef  TIM_TimeBaseStructure;
    TIM_OCInitTypeDef  TIM_OCInitStructure;

    RCC_APB1PeriphClockCmd(SPI_TIMER_APB1, ENABLE);

    /* Time base configuration */
    TIM_TimeBaseStructure.TIM_Period = 0xFFFFFFFF;
    TIM_TimeBaseStructure.TIM_Prescaler = 0x00;
    TIM_TimeBaseStructure.TIM_ClockDivision = 0x0;
    TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;

    TIM_TimeBaseInit(SPI_TIMER, &TIM_TimeBaseStructure);

    /* Prescaler configuration */
    TIM_PrescalerConfig(SPI_TIMER, SPI_TIMER_PRESCALER, TIM_PSCReloadMode_Immediate);

    /* Output Compare Active Mode configuration: Channel1 */
    TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
    TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;

    TIM_OCInitStructure.TIM_Pulse = 0xFFFF; 
    TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;

    TIM_OC1Init(SPI_TIMER, &TIM_OCInitStructure);
    
    TIM_OC1PreloadConfig(SPI_TIMER, TIM_OCPreload_Disable);

    TIM_UpdateRequestConfig(TIM2,TIM_UpdateSource_Regular);    
    
    TIM_ClearFlag(TIM2, TIM_IT_Update);
    
   // TIM_ITConfig(TIM2, TIM_IT_Update, ENABLE);
    
   // initialize_timer_channel(TC_CLKS_MCK32, &PAL_TIMER_CH);

    /* The clock for pal timer is enabled here. */
   // PERIPHERAL_CLOCK_ENABLE(PAL_TIMER_PERIPH_ID);

    /* The clock is enabled at the timer level. */
    TIM2->CR1 |= PAL_TIMER_CCR_EN;

    /* timer overflow interrupts for the pal timer is enabled */
   // PAL_TIMER_IER = PAL_TIMER_SR_OVERFLOW_FLAG;
    NVIC_SetPriority(PAL_TIMER_IRQ_ID, 2);
    /* The pal timer channel interrupt in NVIC is enabled. */
    NVIC_EnableIRQ(PAL_TIMER_IRQ_ID);

    /* pal timer channel is triggered. Reset counter and start clock */
   // PAL_TIMER_CCR = TC_CCR0_SWTRG;
#endif


#ifdef ENABLE_HIGH_PRIO_TMR
    initialize_timer_channel(TC_CLKS_MCK32, &PAL_HIGHPRI_TMR_CH);
    /*
     * The clock for high priority timer will be enabled only when a high
     * priority timer is requested to be started, as until that time, the timer
     * is not used at all. Also the overall power consumption
     * can be reduced by clocking a perpheral only when required.
     */
#endif  /* ENABLE_HIGH_PRIO_TMR */
}

void pal_led(led_id_t led_no, led_action_t led_setting)
{
    uint32_t led_pin;
    uint32_t pin_status;
    GPIO_TypeDef *pio_select;

    switch (led_no)
    {
        case LED_0:
            {
            	led_pin = LED0_PIN;
                pio_select = LED0_IO;
            }
            break;
        case LED_1:
            {
            	led_pin = LED1_PIN;
                pio_select = LED1_IO;
            }
            break;
        case LED_2:
            {
            	led_pin = LED2_PIN;
                pio_select = LED2_IO;
            }
            break;
        default:
            return;
    }
#ifdef PA
    if (led_setting == LED_ON)
    {
        PIN_SET(led_pin, pio_select);
    }
    else if (led_setting == LED_OFF)
    {
        PIN_CLEAR(led_pin, pio_select);
    }
#else
    if (led_setting == LED_ON)
    {
        PIN_CLEAR(led_pin, pio_select);
    }
    else if (led_setting == LED_OFF)
    {
        PIN_SET(led_pin, pio_select);
    }
#endif
    else if (led_setting == LED_TOGGLE)
    {
        PIN_GET_STATUS(pin_status, led_pin, pio_select);

        if (pin_status)
        {
            PIN_CLEAR(led_pin, pio_select);
        }
        else
        {
            PIN_SET(led_pin, pio_select);
        }
    }
    else
    {
        return;
    }
}

button_state_t pal_button_read(button_id_t button_no)
{
    GPIO_TypeDef *pio_ptr;
    uint32_t button;
    if (button_no == BUTTON_0)
    {
        pio_ptr = GPIOB;
        button = LEFT_BUTTON;
    }
    else
    {
        pio_ptr = GPIOB;
        button = RIGHT_BUTTON;
    }
    /* Read the status of the pin(button) */
    if (~pio_ptr->IDR & button)
    {
        return BUTTON_PRESSED;
    }
    else
    {
        return BUTTON_OFF;
    }
}

void trx_interface_init(void)
{ 
    SPI_InitTypeDef   SPI_InitStructure;
    /*
     * Configure the SPI pins
     */


    /*
     * Select line will be used as a GPIO. The controller recognizes 1 cycle
     * of SPI transaction as 8 bit, hence deactivates the chip select after 1
     * cycle. But the transceiver needs the chip select to be active for two
     * cycles (In one cycle the transceiver gets to know about the address of
     * register or memory location and the kind of operation to be performed
     * on that memory location. And in the second cycle its performs the
     * specified operation). To achieve this, the chip select line will be
     * manually pulled low and high (after the transaction). Hence the SEL line
     * is configured as PIO and the SPI control of SEL is disabled.
     */
    PIN_SET_AS_PIO_OUTPUT(SEL, SEL_IO);

    SS_HIGH(); 
   //     SPI_PROTOCOL_Init(&spi_protocol_params,&spi_timer_params);

  
   /* Configure the GPIO ports relative to the SPI lines */
  // SPI_GPIO_Configuration();
   /* Configure the External Interrupt on the HOST_INT for the SPI */
 //  SPI_HOST_INT_EXT_IRQ_Configuration(); /* ??? */
   /* Configure the interrupt controller for the External Interrupt x SPI */
  // SPI_EIC_Configuration();/* ??? */
   /* Initialize the ST core SPI */
  // halCommonInitSpi();
 /** Description: STM32 SPI peripheral connected to the REVA board */
 
 
    PERIPHERAL_CLOCK_ENABLE(ID_SPI);
#ifdef STM32F051    
    GPIO_PinAFConfig(GPIOA, GPIO_PinSource5, GPIO_AF_0);
    GPIO_PinAFConfig(GPIOA, GPIO_PinSource7, GPIO_AF_0);
    GPIO_PinAFConfig(GPIOA, GPIO_PinSource6, GPIO_AF_0);
#elif defined (STM32F401xx)  
    GPIO_PinAFConfig(GPIOA, GPIO_PinSource5, GPIO_AF_SPI1);
    GPIO_PinAFConfig(GPIOA, GPIO_PinSource7, GPIO_AF_SPI1);
    GPIO_PinAFConfig(GPIOA, GPIO_PinSource6, GPIO_AF_SPI1);    
#elif defined (STM32F405xx)    
    GPIO_PinAFConfig(GPIOC, GPIO_PinSource10, GPIO_AF_SPI3);
    GPIO_PinAFConfig(GPIOC, GPIO_PinSource11, GPIO_AF_SPI3);
    GPIO_PinAFConfig(GPIOC, GPIO_PinSource12, GPIO_AF_SPI3); 
#endif    
    pal_pio_configure(spi_pins, PIO_LISTSIZE(spi_pins));
    //NVIC_EnableIRQ(SPI1_IRQn);
  /* Init ST_CORE_SPI as Master */
  SPI_InitStructure.SPI_Direction = SPI_DIRECTION;
  SPI_InitStructure.SPI_Mode = SPI_MODE;
  SPI_InitStructure.SPI_DataSize = SPI_DATASIZE;
  SPI_InitStructure.SPI_CPOL = SPI_CPOL_VALUE;
  SPI_InitStructure.SPI_CPHA = SPI_CPHA_VALUE;
  SPI_InitStructure.SPI_NSS = SPI_NSS_VALUE;
  SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BAUDRATE; 
  SPI_InitStructure.SPI_FirstBit = SPI_FIRSTBIT;
  SPI_InitStructure.SPI_CRCPolynomial = SPI_CRC_N;
  SPI_Init(SPI_NAME, &SPI_InitStructure);
  
#ifdef STM32F051   
  SPI_RxFIFOThresholdConfig(SPI_NAME,SPI_RxFIFOThreshold_QF);
#endif  
  /* Enable SPI */
  SPI_Cmd(SPI_NAME, ENABLE);
}
