==> guilhermetpereira/802.15.4e-LLDN-with-LwMesh/wireless_das_ufsc/board/WM400/src/pal_board.c <==
#include <stdbool.h>
#include <stdlib.h>
#include "pal.h"
#include "pal_boardtypes.h"
#include "pal_config.h"
#include <sysclk.h>
#include <ioport.h>
#include <spi_master.h>
#include "pal_timer.h"
#define TIMER_CHANNEL_0					(0)
#define TIMER_CHANNEL_1					(1)
#define TIMER_CHANNEL_2					(2)
#define CLOCK_TIMEOUT					(0xFFFFFFFF)
#define	SPI_CLK_SPEED					4000000				// 4-MHz

void gpio_init(void)
{
	/**
	 * @brief Performs the low-level initialization of the chip.
	 * This includes EFC and master clock configuration.
	 * It also enable a low level on the pin NRST triggers a user reset.
	 */
	sysclk_init();

	board_init();
}

void timer_init_non_generic(void)
{
#ifdef TIMESTAMP_UPPER_16BIT_SW

    initialize_timer_channel(TC_CLKS_MCK32, &PAL_TIMER_CH);

    /* The clock for pal timer is enabled here. */
    PERIPHERAL_CLOCK_ENABLE(PAL_TIMER_PERIPH_ID);

    /* The clock is enabled at the timer level. */
    PAL_TIMER_CCR						= PAL_TIMER_CCR_EN;

    /* timer overflow interrupts for the pal timer is enabled */
    PAL_TIMER_IER						= PAL_TIMER_SR_OVERFLOW_FLAG;

    /* The pal timer channel interrupt in NVIC is enabled. */
    NVIC_EnableIRQ(PAL_TIMER_IRQ_ID);

    /* pal timer channel is triggered. Reset counter and start clock */
    PAL_TIMER_CCR						= TC_CCR_SWTRG;
#else
    initialize_timer_channel(TC_CLKS_MCK32, &PAL_TIMER_CH);

    /* The clock for pal timer is enabled here. */
    PERIPHERAL_CLOCK_ENABLE(PAL_TIMER_PERIPH_ID);

    /* The clock is enabled at the timer level. */
    PAL_TIMER_CCR						= PAL_TIMER_CCR_EN;

    /* timer overflow interrupts for the pal timer is enabled */
    PAL_TIMER_IER						= PAL_TIMER_SR_OVERFLOW_FLAG;

    /* The pal timer channel interrupt in NVIC is enabled. */
    NVIC_EnableIRQ(PAL_TIMER_IRQ_ID);

    /* Initialize timer for Time stamp -32bit time */
    initialize_timer_channel((TC_CLKS_MCK32 | TC_CMR0_WAVE | TC_CMR0_ACPA_SET | (0x1 << 13) | TC_CMR0_ACPC_CLEAR), &TC0->TC_CHANNEL[TIMER_CHANNEL_0]);
    initialize_timer_channel((TC_CMR0_TCCLKS_XC1), &TC0->TC_CHANNEL[TIMER_CHANNEL_1]);

    /* RC is loaded with 0xFFFF so that whenever CV reached FFFF(RC) TIOA line is
     made as high */
    TC0->TC_CHANNEL[TIMER_CHANNEL_0].TC_RC = 0xFFFF;

    TC0->TC_BMR							= TC_BMR_TC1XC1S_TCLK1;
    TC0->TC_BCR							= TC_BCR_SYNC;

    /* The peripheral clock for pal timer is enabled */
    PERIPHERAL_CLOCK_ENABLE(ID_TC0);
    PERIPHERAL_CLOCK_ENABLE(ID_TC1);

    /* The clock is enabled at the timer level. */
    TC0->TC_CHANNEL[TIMER_CHANNEL_0].TC_CCR = TC_CCR0_CLKEN;
    TC0->TC_CHANNEL[TIMER_CHANNEL_1].TC_CCR = TC_CCR1_CLKEN;

    /* Reset counter and start the timer */
    PAL_TIMER_CCR = TC_CCR0_SWTRG;
    TC0->TC_CHANNEL[TIMER_CHANNEL_0].TC_CCR = TC_CCR0_SWTRG;
    TC0->TC_CHANNEL[TIMER_CHANNEL_1].TC_CCR = TC_CCR1_SWTRG;
#endif


#ifdef ENABLE_HIGH_PRIO_TMR
    initialize_timer_channel(TC_CLKS_MCK32, &PAL_HIGHPRI_TMR_CH);
    /*
     * The clock for high priority timer will be enabled only when a high
     * priority timer is requested to be started, as until that time, the timer
     * is not used at all. Also the overall power consumption
     * can be reduced by clocking a perpheral only when required.
     */
#endif  /* ENABLE_HIGH_PRIO_TMR */
}

void pal_led(led_id_t led_no, led_action_t led_setting)
{
    uint32_t led_pin;
    uint32_t pin_status;
    Pio* pio_select;

    switch (led_no)
    {
        case LED_0:
        {
            led_pin						= PIN_LED_0_MASK;
            pio_select					= PIN_LED_0_PIO;

                if (led_setting == LED_ON)
                {
	                led_setting = LED_OFF;
                }
                else if (led_setting == LED_OFF)
                {
	                led_setting = LED_ON;
                }
                else
                {
                }
		}
        break;
        case LED_1:
        {
            led_pin						= PIN_LED_1_MASK;
            pio_select					= PIN_LED_1_PIO;
        }
        break;
        case LED_2:
        {
	        led_pin						= PIN_LED_2_MASK;
	        pio_select					= PIN_LED_2_PIO;
        }
        break;
        default:
            return;
    }

    if (led_setting == LED_ON)
    {
        PIN_CLEAR(led_pin, pio_select);
    }
    else if (led_setting == LED_OFF)
    {
        PIN_SET(led_pin, pio_select);
    }
    else if (led_setting == LED_TOGGLE)
    {
        PIN_GET_STATUS(pin_status, led_pin, pio_select);

        if (pin_status)
        {
            PIN_CLEAR(led_pin, pio_select);
        }
        else
        {
            PIN_SET(led_pin, pio_select);
        }
    }
    else
    {
        return;
    }
}

button_state_t pal_button_read(button_id_t button_no)
{
    Pio *pio_ptr;
    uint32_t button;
    if (button_no == BUTTON_0)
    {
		button							= PIN_SW0_MASK;
        pio_ptr							= PIN_SW0_PIO;
    }
    else if (button_no == BUTTON_1)
    {
	    button							= PIN_SW1_MASK;
	    pio_ptr							= PIN_SW1_PIO;
    }

    /* Read the status of the pin(button) */
    if (~pio_ptr->PIO_PDSR & button)
    {
        return BUTTON_PRESSED;
    }
    else
    {
        return BUTTON_OFF;
    }
}

void trx_interface_init(void)
{
	spi_master_init(AT86RFX_SPI);
	spi_master_setup_device(AT86RFX_SPI, &SPI_AT86RFX_DEVICE, SPI_MODE_0, SPI_CLK_SPEED, 0);
	spi_set_peripheral_chip_select_value(AT86RFX_SPI, (0x0F & ~(1 << SPI_AT86RFX_DEVICE.id)));
	spi_enable(AT86RFX_SPI);

	ioport_set_pin_mode(AT86RFX_CS_PIN, AT86RFX_CS_FLAGS);
	ioport_set_pin_dir(AT86RFX_CS_PIN, IOPORT_DIR_OUTPUT);
	ioport_set_pin_level(AT86RFX_CS_PIN, IOPORT_PIN_LEVEL_HIGH);
	ioport_enable_pin(AT86RFX_CS_PIN);

	ioport_set_pin_mode(AT86RFX_IRQ0_PIN, AT86RFX_IRQ0_FLAGS);
	ioport_set_pin_dir(AT86RFX_IRQ0_PIN, IOPORT_DIR_INPUT);
	ioport_set_pin_sense_mode(AT86RFX_IRQ0_PIN, IOPORT_SENSE_RISING);
	ioport_enable_pin(AT86RFX_IRQ0_PIN);

	pio_configure_interrupt(AT86RFX_IRQ0_PIO, AT86RFX_IRQ0_MASK, AT86RFX_IRQ0_ATTR);

	ioport_set_pin_mode(AT86RFX_IRQ1_PIN, AT86RFX_IRQ1_FLAGS);
	ioport_set_pin_dir(AT86RFX_IRQ1_PIN, IOPORT_DIR_INPUT);
	ioport_set_pin_sense_mode(AT86RFX_IRQ1_PIN, IOPORT_SENSE_RISING);
	ioport_enable_pin(AT86RFX_IRQ1_PIN);

	pio_configure_interrupt(AT86RFX_IRQ1_PIO, AT86RFX_IRQ1_MASK, AT86RFX_IRQ1_ATTR);

	//NVIC_DisableIRQ(RF_PHY_Vect_IRQn);
	//NVIC_ClearPendingIRQ(RF_PHY_Vect_IRQn);
	//NVIC_EnableIRQ(RF_PHY_Vect_IRQn);
//
	pio_enable_interrupt(AT86RFX_IRQ0_PIO, AT86RFX_IRQ0_MASK);
	pio_enable_interrupt(AT86RFX_IRQ1_PIO, AT86RFX_IRQ1_MASK);
}
